--- a/src/html.styl
+++ b/src/html.styl
@@ -1,15 +1,24 @@
-/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| PragmaCSS. Prototype fast, scale with confidence.
+|-----------------------------------------------------------------------------------------------------------------------
+|
+| html.css
+| ========
+|
+| A minimal stylesheet that serves to reset and normalize the look of basic HTML elements and set reasonable defaults.
+| It also can be configured to define default global attributes to the body.
+|
+*/
 
- html.css
- ========
-
- A minimal stylesheet that serves to reset and normalize the look of basic HTML elements and set reasonable defaults.
- It also can be configured to define default global attributes to the body.
-
- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * /
-
-/* HTML
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| HTML
+|-----------------------------------------------------------------------------------------------------------------------
+|
+| This section takes care of the default appearance of all common HTML tags.
+|
+*/
 div
   box-sizing border-box
 
@@ -128,7 +137,7 @@ textarea
 
 [type="search"]
   -webkit-appearance textfield
-  outlin 0
+  outline 0
 
 [type="search"]::-webkit-search-decoration
   -webkit-appearance none
@@ -149,8 +158,11 @@ template
 [hidden]
   display none
 
-/* Placeholders
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Placeholders
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 ::-webkit-input-placeholder
   color placeholder_color
 
@@ -163,8 +175,11 @@ template
 :-ms-input-placeholder
   color placeholder_color
 
-/* Fieldsets
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Field sets
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 fieldset
   border none
   padding 0
@@ -178,14 +193,20 @@ fieldset
     padding 0
     white-space normal
 
-/* Blockquote
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Blockquote
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 blockquote
   font-size standard_font_size
   line-height standard_line_height
 
-/* Lists
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Lists
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 ol
   list-style-type decimal
   padding 0
@@ -207,8 +228,11 @@ dd, li
 dd > *, li > *
   margin-top 0
 
-/* Code
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Code
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 pre,
 code,
 kbd,
