--- a/src/utilities.styl
+++ b/src/utilities.styl
@@ -1,15 +1,21 @@
-/* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| PragmaCSS. Prototype fast, scale with confidence.
+|-----------------------------------------------------------------------------------------------------------------------
+|
+| utilities.css
+| =============
+|
+| Utilities are generic, low-level classes that serve a specific, singular purpose, but can be combined to cause
+| elements to behave in the desired fashion, usually without the need to create custom classes.
+|
+*/
 
- utilities.css
- =============
-
- Utilities are generic, low-level classes that serve a singular, specific purpose, but can be combined to cause
- elements to behave in the desired fashion, usually without the need to create custom classes.
-
- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * /
-
-/* Display and positioning
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Display and positioning
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .block
   display block
 
@@ -28,8 +34,11 @@
 .hidden
   display none
 
-/* Text
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Text
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .nowrap
   white-space nowrap
 
@@ -55,10 +64,13 @@
 .italic
   font-style italic
 
-/* Letter spacing
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Letter spacing
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .spacing-0
-  letter-spacing standard_letter_spacing
+  letter-spacing 0
 
 .spacing-s
   letter-spacing letter_spacing_s
@@ -69,8 +81,11 @@
 .spacing-l
   letter-spacing letter_spacing_l
 
-/* Shadows
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Shadows
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .shadow-s
   box-shadow shadow_s
 
@@ -80,8 +95,11 @@
 .shadow-l
   box-shadow shadow_l
 
-/* Float
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Floats
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .float-left
   float left
 
@@ -91,8 +109,11 @@
 .clear
   clear both
 
-/* Text alignment
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Text alignment
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .center
   text-align center
 
@@ -102,12 +123,23 @@
 .align-left
   text-align left
 
-@media only screen and (min-width 600px)
-  .center-on-small-only
+@media only screen and (max-width 600px)
+  .center-on-s
     text-align center
 
-/* Transition
-----------------------------------------------------------------------------------------------------------------------*/
+@media only screen and (max-width 900px)
+  .center-on-m
+    text-align center
+
+@media only screen and (max-width 1200px)
+  .center-on-l
+    text-align center
+
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Transitions
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .transition-xs
   transition ease all .1s
 
@@ -120,16 +152,28 @@
 .transition-l
   transition ease all .8s
 
-/* Scaling
-----------------------------------------------------------------------------------------------------------------------*/
-.scale-on-hover-1:hover
+.transition-xl
+  transition ease all .15s
+
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Scaling on hover
+|-----------------------------------------------------------------------------------------------------------------------
+*/
+.scale-on-hover-s:hover
+  transform scale(1.1)
+
+.scale-on-hover-m:hover
   transform scale(1.3)
 
-.scale-on-hover-2:hover
+.scale-on-hover-l:hover
   transform scale(1.6)
 
-/* Vertical align
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Vertical align
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .va-top
   vertical-align top
 
@@ -154,29 +198,43 @@
 .va-super
   vertical-align super
 
-/* Block alignment
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Block alignment
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .center-block
   margin-left auto
   margin-right auto
 
 .align-v,
 .align-h,
-.align-vh
-  display -webkit-flex
-  display -ms-flexbox
+.align-vh,
+.space-evenly,
+.space-around,
+.space-between
   display flex
 
 .align-v, .align-vh
-  -webkit-align-items center
-  -ms-flex-align center
   align-items center
 
 .align-h, .align-vh
   justify-content center
 
-/* Rounded corners
-----------------------------------------------------------------------------------------------------------------------*/
+.space-evenly
+  justify-content space-evenly
+
+.space-around
+  justify-content space-around
+
+.space-between
+  justify-content space-between
+
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Rounded corners
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .rounded-s
   border-radius rounded_s
 
@@ -188,21 +246,27 @@
   border-radius rounded_l
 
 .rounded-full
-  border-radius 1000px
+  border-radius 10000px
 
 .circular
   border-radius 100%
 
-/* Mouse cursors
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Mouse cursors
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .pointer
   cursor pointer
 
 .no-pointer-events
   pointer-events none
 
-/* Fixed positioning
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Fixed positioning
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .fixed
   position fixed
   &.left
@@ -214,8 +278,11 @@
   &.bottom
     bottom 0
 
-/* Images
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Images
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .responsive
   max-width 100%
   height auto
@@ -227,8 +294,11 @@
 .img-pixelated
   image-rendering pixelated
 
-/* Responsive hide
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Responsive hide
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 @media only screen and (max-width 600px)
   .hide-on-s
     display none !important
@@ -253,8 +323,11 @@
   .hide-on-xxxl
     display none !important
 
-/* Responsive show
-----------------------------------------------------------------------------------------------------------------------*/
+/*
+|-----------------------------------------------------------------------------------------------------------------------
+| Responsive show
+|-----------------------------------------------------------------------------------------------------------------------
+*/
 .show-on-s,
 .show-on-m,
 .show-on-l,
